# RenderEngine

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
include/: Camera.hpp  Engine.hpp  Mesh.hpp  Model.hpp  Operation.hpp  Shader.hpp  Texture.hpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
shader/: testModelf.glsl  testModelv.glsl
src/: Camera.cpp  Engine.cpp  Mesh.cpp  Model.cpp  Operation.cpp  Shader.cpp  Texture.cpp  main.cpp
